--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "express-local-library",
   "version": "1.0.0",
   "engines": {
-    "node": "8.2.1"
+    "node": "8.2.1",
+    "npm": "5.3.0"
   },
   "private": true,
   "scripts": {
